Fix select overflows?

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -56,6 +56,34 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
+  https://github.com/sagalbot/vue-select/issues/754#issuecomment-654065539
+*/
+.vs__selected-options {
+  flex-wrap: nowrap;
+  max-width: calc(100% - 41px);
+}
+
+.vs__selected {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.vs__search {
+  position: absolute;
+}
+
+.vs--open .vs__search {
+  position: static;
+}
+
+.vs__dropdown-option {
+  white-space: normal;
+}
+
 .bg-diagonal {
   background-color: rgb(255 255 255 / 14.4%);
   background-image: linear-gradient(
